discussion/kv_engine/175101/175101_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52219: Reset all throttle-related bucket members

Bucket::reset() should put all members back in a clean
state

Change-Id: Ifd2436044bd3c9f8c5743abbc1aade5a81e471b1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-21 09:50:10.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-21 10:18:52.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17625/ : FAILURE

clang-tidy found the following problems:

<pre>
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:336:35: error: arithmetic on a pointer to an incomplete type "thread_stats" [clang-diagnostic-error]
                      _M_impl._M_end_of_storage - _M_impl._M_start);
                                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:678:7: note: in instantiation of member function "std::_Vector_base<thread_stats, std::allocator<thread_stats> >::~_Vector_base" requested here
      ~vector() _GLIBCXX_NOEXCEPT
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:37:7: note: in instantiation of member function "std::vector<thread_stats, std::allocator<thread_stats> >::~vector" requested here
class Bucket {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:29:8: note: forward declaration of "thread_stats"
struct thread_stats;
       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/new_allocator.h:123:6: error: invalid application of "alignof" to an incomplete type "thread_stats" [clang-diagnostic-error]
        if (alignof(_Tp) > __STDCPP_DEFAULT_NEW_ALIGNMENT__)
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/alloc_traits.h:492:13: note: in instantiation of member function "__gnu_cxx::new_allocator<thread_stats>::deallocate" requested here
      { __a.deallocate(__p, __n); }
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:354:9: note: in instantiation of member function "std::allocator_traits<std::allocator<thread_stats> >::deallocate" requested here
          _Tr::deallocate(_M_impl, __p, __n);
               ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:335:2: note: in instantiation of member function "std::_Vector_base<thread_stats, std::allocator<thread_stats> >::_M_deallocate" requested here
        _M_deallocate(_M_impl._M_start,
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:678:7: note: in instantiation of member function "std::_Vector_base<thread_stats, std::allocator<thread_stats> >::~_Vector_base" requested here
      ~vector() _GLIBCXX_NOEXCEPT
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:37:7: note: in instantiation of member function "std::vector<thread_stats, std::allocator<thread_stats> >::~vector" requested here
class Bucket {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:29:8: note: forward declaration of "thread_stats"
struct thread_stats;
       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/ext/new_allocator.h:135:14: error: invalid application of "sizeof" to an incomplete type "thread_stats" [clang-diagnostic-error]
                          , __t * sizeof(_Tp)
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:29:8: note: forward declaration of "thread_stats"
struct thread_stats;
       ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/type_traits:844:7: error: static_assert failed due to requirement "std::__is_complete_or_unbounded(std::__type_identity<thread_stats>{})" "template argument must be a complete class or an unbounded array" [clang-diagnostic-error]
      static_assert(std::__is_complete_or_unbounded(__type_identity<_Tp>{}),
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_construct.h:177:21: note: in instantiation of template class "std::is_destructible<thread_stats>" requested here
      static_assert(is_destructible<_Value_type>::value,
                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/alloc_traits.h:738:7: note: in instantiation of function template specialization "std::_Destroy<thread_stats *>" requested here
      _Destroy(__first, __last);
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:680:7: note: in instantiation of function template specialization "std::_Destroy<thread_stats *, thread_stats>" requested here
        std::_Destroy(this->_M_impl._M_start, this->_M_impl._M_finish,
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets.h:37:7: note: in instantiation of member function "std::vector<thread_stats, std::allocator<thread_stats> >::~vector" requested here
class Bucket {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17625/ )

Compile error at /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:336:35:
error: arithmetic on a pointer to an incomplete type "thread_stats" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17625/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7337/ : FAILURE

Compile error at [2022-05-21T09:58:53.831Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7337/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18600/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18600/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16649/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46282/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38887/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19394/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27796/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20413/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19745/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
